@@ -2,6 +2,7 @@ Revision history for Perl module Exporter::Lite
 
 0.05 2014-03-26
     - Improved the DESCRIPTION section, particularly the first paragraph.
+    - Added a bunch more Exporter modules to the SEE ALSO section.
 
 0.04 2014-03-26
     - Added Constant::Exporter::Lazy to SEE ALSO
